# QW

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.tr.md  a.ll  test.cc
app/: .gitignore  CMakeLists.txt  main.cc  qwrtl.c
doc/: SysIntrinsic.md
pkgs/com.test.qw/: CMakeLists.txt
pkgs/com.test.qw/src/: .gitignore  Test.cc  Test.qw
pkgs/lib.qaos.basis/inc/: Basis.h  Basis.hh
pkgs/lib.qaos.qw/: CMakeLists.txt
pkgs/lib.qaos.qw/i18n/: main.pot
pkgs/lib.qaos.qw/i18n/tr/LC_MESSAGES/: main.po
pkgs/lib.qaos.qw/inc/: Context.hh  Decls.hh  Diagnostic.hh  Exprs.hh  Front.hh  I18N.hh  Msgs.hh  Pass1.hh  ScopeManager.hh  Stmts.hh  Types.hh  Typs.hh
pkgs/lib.qaos.qw/src/: Context.cc  Decls.cc  Diagnostic.cc  Exprs.cc  Front.Lexer.cc  Front.cc  Pass1.cc  ScopeManager.cc  Stmts.cc  Types.cc  Typs.cc
qw/: basis.hh  pretype.cc  pretype.hh
qw/check/: check.cc  check.hh
qw/codegen/: codegen.cc  codegen.hh
qw/control/: context.cc  context.hh  scopemng.cc  scopemng.hh
qw/diagnostic/: diagnostic.cc  diagnostic.hh  i18n.hh  msgs.hh
qw/ds/: ds.cc  ds.hh
qw/front/: front.cc  front.hh  front.lexer.cc
qw/i18n/: main.pot
qw/i18n/tr/LC_MESSAGES/: main.mo  main.po
qw/sema/: sema.cc  sema.hh
qw/tree/: decls.cc  decls.hh  exprs.cc  exprs.hh  stmts.cc  stmts.hh  types.cc  types.hh
qw/vfs/: vfs.cc  vfs.hh  vfs_embed.cc  vfs_embed.hh  vfs_file.cc  vfs_file.hh
sandbox/: manifest.conf  qw.conf
sandbox/src/: engine.qw  main.qw
sandbox/src/math/: complex.qw  mod.qw
